# numistalib

./: .bumpversion.cfg  .env.example  .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG  CHANGELOG.md  DOCUMENTATION_READY.md  README.md  license.txt  pyproject.toml  setup.cfg  test_crud_demo.py
.github/: PYPI_SETUP.md  copilot-instructions.md
.github/workflows/: README.md  docstring-agent.yml  pylint.yml  release.yml  rtd-publish.yml  test.yml
docs/: DEPLOYMENT.md  README.md  architecture.md  changelog.md  cli_guide.md  conf.py  configuration.md  contributing.md  index.rst  installation.md  license.md  numista-swagger.yml  requirements.txt
docs/_build/html/: .buildinfo  DEPLOYMENT.html  README.html  advanced_usage.html  architecture.html  changelog.html  cli_guide.html  configuration.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  python_api_guide.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: DEPLOYMENT.doctree  README.doctree  advanced_usage.doctree  architecture.doctree  changelog.doctree  cli_guide.doctree  configuration.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  python_api_guide.doctree  quickstart.doctree
docs/_build/html/.doctrees/api/: cli.doctree  client.doctree  index.doctree  models.doctree  services.doctree
docs/_build/html/_downloads/079962c730e6e61f3f9971f670e9cf70/: pyproject.toml
docs/_build/html/_downloads/688ea7a688c6ee348af1be3806f8c6bf/: numista-swagger.yml
docs/_build/html/_downloads/aee468cb7d875987a5744d72aca8b0e4/: .readthedocs.yml
docs/_build/html/_downloads/b67911656ef5d18c4ae36cb6741b7965/: Makefile
docs/_build/html/_downloads/fb0d0d7ff27f33697ba3b787ec894677/: conf.py
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/numistalib/: client.html
docs/_build/html/_modules/numistalib/cli/: catalogues.html  collections.html  config.html  image_search.html  issuers.html  issues.html  literature.html  main.html  mints.html  (+4 more)
docs/_build/html/_sources/: DEPLOYMENT.md.txt  README.md.txt  advanced_usage.md.txt  changelog.md.txt  contributing.md.txt  index.rst.txt  installation.md.txt  python_api_guide.md.txt  quickstart.md.txt
docs/_build/html/_sources/api/: cli.rst.txt  client.rst.txt  index.rst.txt
docs/_build/html/_static/: README.md
docs/_build/html/api/: cli.html  client.html  index.html  models.html  services.html
docs/api/: client.rst  models.rst  services.rst
src/: __init__.py
src/numista_lib/: __init__.py  client.py  config.py
src/numista_lib/cli/: __init__.py  catalogues.py  collections.py  config.py  image_search.py  issuers.py  issues.py  literature.py  main.py  mints.py  prices.py  theme.py  types.py  users.py
src/numista_lib/models/: __init__.py  catalogues.py  collections.py  currency.py  errors.py  issuer.py  issues.py  literature.py  mints.py  prices.py  references.py  sides.py  types.py  updates.py  users.py
src/numista_lib/models/base/: __init__.py  base_model.py
src/numista_lib/services/: __init__.py
src/numista_lib/services/base/: __init__.py  helpers.py  service.py
src/numista_lib/services/catalogues/: __init__.py  base.py  service.py
src/numista_lib/services/collections/: __init__.py  base.py  service.py
src/numista_lib/services/image_search/: __init__.py  base.py  service.py
src/numista_lib/services/issuer/: __init__.py  base.py  service.py
src/numista_lib/services/issues/: __init__.py  base.py  service.py
src/numista_lib/services/literature/: __init__.py  base.py  service.py
src/numista_lib/services/mints/: __init__.py  base.py  service.py
src/numista_lib/services/prices/: __init__.py  base.py  service.py
src/numista_lib/services/types/: __init__.py  base.py  service.py
src/numista_lib/services/users/: __init__.py  base.py  service.py
src/numistalib/: __init__.py  __main__.py  client.py  config.py
src/numistalib/cli/: __init__.py  catalogues.py  collections.py  config.py  image_search.py  issuers.py  issues.py  literature.py  main.py  mints.py  oauth.py  prices.py  theme.py  types.py  users.py
src/numistalib/models/: __init__.py  catalogues.py  collections.py  countries.py  currency.py  errors.py  issuer.py  issues.py  literature.py  mints.py  oauth.py  prices.py  references.py  sides.py  types.py  updates.py  users.py
src/numistalib/models/base/: __init__.py  base_model.py
src/numistalib/services/: __init__.py
src/numistalib/services/base/: __init__.py  helpers.py  service.py
src/numistalib/services/catalogues/: __init__.py  base.py  service.py
src/numistalib/services/collections/: __init__.py  base.py  service.py
src/numistalib/services/image_search/: __init__.py  base.py  service.py
src/numistalib/services/issuer/: __init__.py  base.py  service.py
src/numistalib/services/issues/: __init__.py  base.py  service.py
src/numistalib/services/literature/: __init__.py  base.py  service.py
src/numistalib/services/mints/: __init__.py  base.py  service.py
src/numistalib/services/oauth/: __init__.py  base.py  service.py
src/numistalib/services/prices/: __init__.py  base.py  service.py
src/numistalib/services/types/: __init__.py  base.py  service.py
src/numistalib/services/users/: __init__.py  base.py  service.py
tests/: __init__.py  conftest.py  test_catalogue_service_happy.py  test_client_base_utils.py  test_collected_item.py  test_documentation_examples.py  test_issuer_service_happy.py  test_issues_service_happy.py  test_mints_service_happy.py  test_models.py  test_rich_renderables.py  test_service_base_utils.py  test_types_service_happy.py  test_types_service_validation.py  test_users_service_happy.py
tests/integration/: README.md  __init__.py  conftest.py  test_cli_catalogues_read.py  test_cli_collections_read.py  test_cli_config_read.py  test_cli_image_search_read.py  test_cli_issuers_read.py  test_cli_issues_read.py  test_cli_literature_read.py  test_cli_mints_read.py  test_cli_oauth_read.py  test_cli_prices_read.py  test_cli_types_read.py  test_cli_users_read.py
(+25 files in other folders)
