[project]
name = "numistalib"
version = "0.1.1"
description = "Numista API wrapper"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Andy Wells", email = "wells10440@gmail.com"}]
dependencies = [
    "pydantic>=2.12.5", # Strict models/validation
    "pydantic-settings>=2.5.0", # Config from env
    "rich>=14.2.0", # CLI rendering
    "click>=8.1.0", # CLI commands
    "ccy>=1.7.2",
    "httpx>=0.28.1",
    "pycountry>=24.6.1",
    "hishel[httpx]>=1.1.6", # RFC 9111-compliant HTTP caching (AGENTS.MD Section 14)
    "pyrate-limiter>=3.9.0", # Rate limiting (transport-level)
    "tenacity>=9.0.0",
    "textual-image>=0.8.5",
    "beautifulsoup4>=4.14.3",
]

[project.urls]
Homepage = "https://github.com/wells01440/numistalib"
Documentation = "https://numistalib.readthedocs.io/"
Source = "https://github.com/wells01440/numistalib"
Issues = "https://github.com/wells01440/numistalib/issues"
Changelog = "https://github.com/wells01440/numistalib/blob/main/CHANGELOG"
NumistaAPI = "https://en.numista.com/api/doc/index.php"
NumistaConditions = "https://en.numista.com/conditions.php"
NumistaLegal = "https://en.numista.com/legal.php"
NumistaPricingAPI = "https://en.numista.com/api/pricing.php"

[project.scripts]
numistalib = "numistalib.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14.10", # Linting / formatting
    "pytest>=9.0.1",
    "bump2version>=1.0.1", # Version management 
    "pytest-mock>=3.14.0", 
    "pytest-cov>=7.0.0", 
    "radon>=6.0.1", # Complexity metrics
    "types-requests>=2.31.0.202409.0", # Stubs for strict mypy
    "types-pillow>=10.2.0.20240520", # Pillow type stubs
    "uv",
    "xenon>=0.9.3",
    "pyright>=1.1.0", 
    "mypy>=1.19.1",
    "pydocstyle>=6.3.0", # NumPy docstring validation
    "interrogate>=1.7.0", # Docstring coverage enforcement
    "darglint>=1.8.1", # Docstring argument validation
]

docs = [
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]
preview = true
indent-width = 4


[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "B", "C",   # bugbear
  "UP",       # pyupgrade
  "I",        # isort
  "N",        # pep8-naming
  "BLE",      # flake8-blind-except
  "C90",      # mccabe complexity
  "T20",      # flake8-print
  "TID",      # flake8-tidy-imports
  "ARG",      # flake8-unused-arguments
  "PTH",      # flake8-use-pathlib
  "PLC", "PLE", "PLR", "PLW",  # pylint
  "RUF",      # ruff-specific rules
  "Q",        # flake8-quotes
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = ["E501"]  # Line length handled by config

# Override for tests: more lenient rules (ยง 4.1.2 AGENTS.md: "Not enforced in /tests")
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D",        # pydoc rules not enforced in tests (ยง 4.1.2)
  "PLR6301",  # methods could be functions/class methods in tests
  "PLC0415",  # imports not at top-level (sometimes needed in fixtures)
  "PLR0913",  # too many arguments
  "PLR0917",  # too many positional arguments
  "ARG",      # unused arguments acceptable in test fixtures
]
# Source file exceptions for reasonable deferred imports and complex rendering logic
"src/numistalib/models/types.py" = [
  "PLC0415",  # deferred imports in @property and methods avoid circular imports and are necessary
  "C901",     # complex methods are data-intensive rendering - refactoring would be counterproductive
  "PLR0912",  # complex methods are data-intensive rendering
  "PLR0915",  # complex methods are data-intensive rendering
  "PLR0914",  # many local variables needed for detailed rendering
  "BLE001",   # catching broad exceptions in data parsing is appropriate
]
"src/numistalib/models/base/base_model.py" = [
  "PLC0415",  # deferred imports avoid circular imports
  "E117",     # function indentation in method
  "E721",     # type comparison necessary in scrubbing logic
  "E741",     # single-char variable in list comp is clear
  "ARG002",   # style_overrides parameter is for future use
  "PLR2004",  # magic value 25 is domain-specific field width
  "PLR0912",  # render_compact has necessary branches
  "PLW3201",  # __rich_repr__ and __rich_console__ are Rich protocol methods
]
"src/numistalib/client.py" = [
  "PLC0415",  # deferred pathlib import is reasonable
]
"src/numistalib/services/base/service.py" = [
  "PLC0415",  # deferred imports avoid circular imports
  "PLR6301",  # handle_cli_error is intentionally a method for consistency
]
"src/numistalib/cli/theme.py" = [
  "PLR0913",  # panel method has many parameters for flexibility
]
"src/numistalib/cli/types.py" = [
  "PLR0913",  # click commands naturally have many parameters
  "PLR0917",  # click commands naturally have many parameters
]
"src/numistalib/services/types/service.py" = [
  "PLR0913",  # async search has many search parameters
  "PLR0917",  # async search has many search parameters
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__", ".venv", "build", "dist", "alembic", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownParameterType = true
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportUnusedFunction = true
reportOptionalMemberAccess = false
reportOptionalSubscript = false

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "numistalib.models.types"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src/numistalib"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
fail_under = 40

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D100", "D104", "D105"]
match = "(?!test_).*\\.py"
match-dir = "^(?!tests|\\.)[^_].*"

[tool.darglint]
docstring_style = "numpy"
strictness = "short"
ignore_regex = "^_.*"
enable = ["DAR104"]

[tool.interrogate]
ignore-init-method = true
ignore-private = true
ignore-magic = true
ignore-module = false
ignore-nested-functions = true
fail-under = 80
exclude = ["tests"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
